@@ -13,14 +13,12 @@ import java.math.RoundingMode;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FeesService {
 
     private static final BigDecimal PENCE_PER_POUND = BigDecimal.valueOf(100);
-
     private final FeesClientService feesClient;
     private final FeesConfiguration feesConfiguration;
 
@@ -91,7 +89,7 @@ public class FeesService {
         return Arrays.stream(feeRanges)
             .sorted(Comparator.comparing(Fee2Dto::getMinRange, Comparator.nullsFirst(Comparator.naturalOrder())))
             .filter(e -> e.getMinRange() != null)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
